--- a/index.html
+++ b/index.html
@@ -15,29 +15,41 @@
             <img src="" alt="">
         </div>
         <nav>
-            <ul class="head-ul">
-                <a href="#" class="header-tag">Main page</a>
+            <ol class="head-ol">
+                <a href="#" class="header-tag">About</a>
                 <a href="#" class="header-tag">Exprience</a>
-                <a href="#" class="header-tag">About me</a>
-                <a href="#" class="header-tag">Email</a>
+                <a href="#" class="header-tag">Work</a>
+                <a href="#" class="header-tag">Contact</a>
                 <button class="header-btn">Contact me</button>
-            </ul> 
+            </ol> 
         </nav>
     </header>
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Hello, My name is Bobur</h1>
+                <h3>Hello, my name is</h3>
+                <h1>Sodikov Bobur</h1>
                 <p>I'm a Front-end engineer specializing in building interactive and responsive websites for the web. Currently, I am focused on building accessible single page applications using React and other new technologies</p>
                 <a href="#">Reach at me!</a>
             </div>
-            <div class="hero-image">
-                <img src="./images/5330191265335209418_121.jpg" alt="" class="image">
+        </section>
+
+        <section>
+            <div class="about-me">
+                <h1>01. About me</h1>
+                <p>Hello! My name is Usmonkul, and I am a passionate front-end developer with a keen eye for creating engaging user experiences. I hold a Bachelor's degree in Computer Science from Woosong University, where I graduated with an impressive GPA of 4.36 out of 4.50. <br> <br>
+
+                I specialize in front-end technologies, including React, JavaScript, Next js, and Tailwind CSS, which I skillfully use to develop modern and responsive web applications. My expertise extends to Flask, MySQL, TypeScript, and Express js, enabling me to deliver dynamic and innovative functionalities. <br> <br>
+                    
+                Throughout my career, I have successfully collaborated with diverse teams, showcasing strong communication and teamwork skills. My adaptability and commitment to continuous learning drive me to stay ahead of industry trends and rapidly adopt new technologies</p>
             </div>
         </section>
+
+
+
         <section class="hero2">
             <div class="hero-content2">
-                <h1>Things i know!</h1>
+                <h1>Things I know!</h1>
             </div>
         </section>
         <section>
@@ -64,11 +76,11 @@
 
         <section class="hero3">
             <div class="hero-content3">
-                <h1 class="h1z1">About me</h1>
-                <p>Hello! My name is Bobur, and I am a passionate front-end developer with a keen eye for creating engaging user experiences. I hold a degree in gaming and cheating in exams and absolutly nothing else, where I graduated with an impressive GPA of 4.36 out of 4.50 <br> <br> I specialize in front-end technologies, including React, JavaScript, Next js, and Tailwind CSS, which I skillfully use to develop modern and responsive web applications. My expertise extends to Flask, MySQL, TypeScript, and Express js, enabling me to deliver dynamic and innovative functionalities <br><br>Throughout my career, I have successfully collaborated with diverse teams, showcasing strong communication and teamwork skills. My adaptability and commitment to continuous learning drive me to stay ahead of industry trends and rapidly adopt new technologies. </p>
+                <!-- <h1 class="h1z1">About me</h1> -->
+                <!-- <p>Hello! My name is Bobur, and I am a passionate front-end developer with a keen eye for creating engaging user experiences. I hold a degree in gaming and cheating in exams and absolutly nothing else, where I graduated with an impressive GPA of 4.36 out of 4.50 <br> <br> I specialize in front-end technologies, including React, JavaScript, Next js, and Tailwind CSS, which I skillfully use to develop modern and responsive web applications. My expertise extends to Flask, MySQL, TypeScript, and Express js, enabling me to deliver dynamic and innovative functionalities <br><br>Throughout my career, I have successfully collaborated with diverse teams, showcasing strong communication and teamwork skills. My adaptability and commitment to continuous learning drive me to stay ahead of industry trends and rapidly adopt new technologies. </p> -->
             </div>
             <div class="hero-image">
-                <img src="./images/5330191265335209502_121.jpg" alt="" class="image2">
+                <!-- <img src="5330191265335209502_121.jpg" alt="" class="image2"> -->
             </div>
         </section>
     </main>
